report9/exception/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET var vars EQ expr SEMISEMI
   4           | LET REC var var EQ expr SEMISEMI
   5           | LET REC var EQ expr SEMISEMI
   6           | EXCEPTION except SEMISEMI

   7  expr : LET var EQ expr IN expr
   8       | LET var vars EQ expr IN expr
   9       | LET REC var var EQ expr IN expr
  10       | IF expr THEN expr ELSE expr
  11       | FUN var ARROW expr
  12       | FUN var vars ARROW expr
  13       | DFUN var ARROW expr
  14       | arith_expr EQ arith_expr
  15       | arith_expr LT arith_expr
  16       | MATCH expr WITH cases
  17       | MATCH expr WITH BAR cases
  18       | RAISE except
  19       | list_expr

  20  cases : pattern ARROW expr
  21        | pattern ARROW expr BAR cases

  22  pattern : atomic_pattern CONS pattern
  23          | atomic_pattern

  24  atomic_pattern : INT
  25                 | BOOL
  26                 | var
  27                 | LPAR pattern COMMA pattern RPAR
  28                 | LBRACKET RBRACKET
  29                 | LPAR pattern RPAR

  30  list_expr : arith_expr CONS list_expr
  31            | arith_expr

  32  arith_expr : arith_expr PLUS factor_expr
  33             | arith_expr MINUS factor_expr
  34             | factor_expr

  35  factor_expr : factor_expr TIMES app_expr
  36              | factor_expr DIV app_expr
  37              | app_expr

  38  app_expr : app_expr atomic_expr
  39           | atomic_expr

  40  atomic_expr : INT
  41              | BOOL
  42              | LPAR expr COMMA expr RPAR
  43              | LBRACKET RBRACKET
  44              | ID
  45              | LPAR expr RPAR

  46  vars : var vars
  47       | var

  48  var : ID

  49  except : EXCEPTID

  50  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (50)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	EXCEPTION  shift 14
	.  error

	toplevel  goto 15
	expr  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (40)

	.  reduce 40


state 4
	atomic_expr : BOOL .  (41)

	.  reduce 41


state 5
	atomic_expr : ID .  (44)

	.  reduce 44


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . var vars EQ expr SEMISEMI  (3)
	toplevel : LET . REC var var EQ expr SEMISEMI  (4)
	toplevel : LET . REC var EQ expr SEMISEMI  (5)
	expr : LET . var EQ expr IN expr  (7)
	expr : LET . var vars EQ expr IN expr  (8)
	expr : LET . REC var var EQ expr IN expr  (9)

	ID  shift 22
	REC  shift 23
	.  error

	var  goto 24


state 7
	expr : IF . expr THEN expr ELSE expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 26
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 8
	atomic_expr : LPAR . expr COMMA expr RPAR  (42)
	atomic_expr : LPAR . expr RPAR  (45)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 27
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 9
	expr : FUN . var ARROW expr  (11)
	expr : FUN . var vars ARROW expr  (12)

	ID  shift 22
	.  error

	var  goto 28


state 10
	expr : DFUN . var ARROW expr  (13)

	ID  shift 22
	.  error

	var  goto 29


state 11
	atomic_expr : LBRACKET . RBRACKET  (43)

	RBRACKET  shift 30
	.  error


state 12
	expr : MATCH . expr WITH cases  (16)
	expr : MATCH . expr WITH BAR cases  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 31
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 13
	expr : RAISE . except  (18)

	EXCEPTID  shift 32
	.  error

	except  goto 33


state 14
	toplevel : EXCEPTION . except SEMISEMI  (6)

	EXCEPTID  shift 32
	.  error

	except  goto 34


state 15
	%entry% : '\001' toplevel .  (50)

	.  reduce 50


state 16
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 35
	.  error


state 17
	expr : arith_expr . EQ arith_expr  (14)
	expr : arith_expr . LT arith_expr  (15)
	list_expr : arith_expr . CONS list_expr  (30)
	list_expr : arith_expr .  (31)
	arith_expr : arith_expr . PLUS factor_expr  (32)
	arith_expr : arith_expr . MINUS factor_expr  (33)

	PLUS  shift 36
	MINUS  shift 37
	EQ  shift 38
	LT  shift 39
	CONS  shift 40
	IN  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	RPAR  reduce 31
	COMMA  reduce 31
	WITH  reduce 31
	BAR  reduce 31
	SEMISEMI  reduce 31


state 18
	expr : list_expr .  (19)

	.  reduce 19


state 19
	arith_expr : factor_expr .  (34)
	factor_expr : factor_expr . TIMES app_expr  (35)
	factor_expr : factor_expr . DIV app_expr  (36)

	TIMES  shift 41
	DIV  shift 42
	IN  reduce 34
	PLUS  reduce 34
	MINUS  reduce 34
	EQ  reduce 34
	LT  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	RPAR  reduce 34
	CONS  reduce 34
	COMMA  reduce 34
	WITH  reduce 34
	BAR  reduce 34
	SEMISEMI  reduce 34


state 20
	factor_expr : app_expr .  (37)
	app_expr : app_expr . atomic_expr  (38)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 37
	PLUS  reduce 37
	TIMES  reduce 37
	MINUS  reduce 37
	DIV  reduce 37
	EQ  reduce 37
	LT  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	RPAR  reduce 37
	CONS  reduce 37
	COMMA  reduce 37
	WITH  reduce 37
	BAR  reduce 37
	SEMISEMI  reduce 37

	atomic_expr  goto 43


state 21
	app_expr : atomic_expr .  (39)

	.  reduce 39


state 22
	var : ID .  (48)

	.  reduce 48


state 23
	toplevel : LET REC . var var EQ expr SEMISEMI  (4)
	toplevel : LET REC . var EQ expr SEMISEMI  (5)
	expr : LET REC . var var EQ expr IN expr  (9)

	ID  shift 22
	.  error

	var  goto 44


state 24
	toplevel : LET var . EQ expr SEMISEMI  (2)
	toplevel : LET var . vars EQ expr SEMISEMI  (3)
	expr : LET var . EQ expr IN expr  (7)
	expr : LET var . vars EQ expr IN expr  (8)

	ID  shift 22
	EQ  shift 45
	.  error

	var  goto 46
	vars  goto 47


state 25
	expr : LET . var EQ expr IN expr  (7)
	expr : LET . var vars EQ expr IN expr  (8)
	expr : LET . REC var var EQ expr IN expr  (9)

	ID  shift 22
	REC  shift 48
	.  error

	var  goto 49


state 26
	expr : IF expr . THEN expr ELSE expr  (10)

	THEN  shift 50
	.  error


state 27
	atomic_expr : LPAR expr . COMMA expr RPAR  (42)
	atomic_expr : LPAR expr . RPAR  (45)

	RPAR  shift 51
	COMMA  shift 52
	.  error


state 28
	expr : FUN var . ARROW expr  (11)
	expr : FUN var . vars ARROW expr  (12)

	ID  shift 22
	ARROW  shift 53
	.  error

	var  goto 46
	vars  goto 54


state 29
	expr : DFUN var . ARROW expr  (13)

	ARROW  shift 55
	.  error


state 30
	atomic_expr : LBRACKET RBRACKET .  (43)

	.  reduce 43


state 31
	expr : MATCH expr . WITH cases  (16)
	expr : MATCH expr . WITH BAR cases  (17)

	WITH  shift 56
	.  error


state 32
	except : EXCEPTID .  (49)

	.  reduce 49


state 33
	expr : RAISE except .  (18)

	.  reduce 18


state 34
	toplevel : EXCEPTION except . SEMISEMI  (6)

	SEMISEMI  shift 57
	.  error


state 35
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 36
	arith_expr : arith_expr PLUS . factor_expr  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 58
	app_expr  goto 20
	atomic_expr  goto 21


state 37
	arith_expr : arith_expr MINUS . factor_expr  (33)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 59
	app_expr  goto 20
	atomic_expr  goto 21


state 38
	expr : arith_expr EQ . arith_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 60
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 39
	expr : arith_expr LT . arith_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 61
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 40
	list_expr : arith_expr CONS . list_expr  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 62
	list_expr  goto 63
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 41
	factor_expr : factor_expr TIMES . app_expr  (35)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 64
	atomic_expr  goto 21


state 42
	factor_expr : factor_expr DIV . app_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 65
	atomic_expr  goto 21


state 43
	app_expr : app_expr atomic_expr .  (38)

	.  reduce 38


state 44
	toplevel : LET REC var . var EQ expr SEMISEMI  (4)
	toplevel : LET REC var . EQ expr SEMISEMI  (5)
	expr : LET REC var . var EQ expr IN expr  (9)

	ID  shift 22
	EQ  shift 66
	.  error

	var  goto 67


state 45
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 68
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 46
	vars : var . vars  (46)
	vars : var .  (47)

	ID  shift 22
	EQ  reduce 47
	ARROW  reduce 47

	var  goto 46
	vars  goto 69


state 47
	toplevel : LET var vars . EQ expr SEMISEMI  (3)
	expr : LET var vars . EQ expr IN expr  (8)

	EQ  shift 70
	.  error


state 48
	expr : LET REC . var var EQ expr IN expr  (9)

	ID  shift 22
	.  error

	var  goto 71


state 49
	expr : LET var . EQ expr IN expr  (7)
	expr : LET var . vars EQ expr IN expr  (8)

	ID  shift 22
	EQ  shift 72
	.  error

	var  goto 46
	vars  goto 73


state 50
	expr : IF expr THEN . expr ELSE expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 74
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 51
	atomic_expr : LPAR expr RPAR .  (45)

	.  reduce 45


state 52
	atomic_expr : LPAR expr COMMA . expr RPAR  (42)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 75
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 53
	expr : FUN var ARROW . expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 76
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 54
	expr : FUN var vars . ARROW expr  (12)

	ARROW  shift 77
	.  error


state 55
	expr : DFUN var ARROW . expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 78
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 56
	expr : MATCH expr WITH . cases  (16)
	expr : MATCH expr WITH . BAR cases  (17)

	INT  shift 79
	BOOL  shift 80
	ID  shift 22
	LPAR  shift 81
	LBRACKET  shift 82
	BAR  shift 83
	.  error

	var  goto 84
	cases  goto 85
	pattern  goto 86
	atomic_pattern  goto 87


state 57
	toplevel : EXCEPTION except SEMISEMI .  (6)

	.  reduce 6


state 58
	arith_expr : arith_expr PLUS factor_expr .  (32)
	factor_expr : factor_expr . TIMES app_expr  (35)
	factor_expr : factor_expr . DIV app_expr  (36)

	TIMES  shift 41
	DIV  shift 42
	IN  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	EQ  reduce 32
	LT  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	RPAR  reduce 32
	CONS  reduce 32
	COMMA  reduce 32
	WITH  reduce 32
	BAR  reduce 32
	SEMISEMI  reduce 32


state 59
	arith_expr : arith_expr MINUS factor_expr .  (33)
	factor_expr : factor_expr . TIMES app_expr  (35)
	factor_expr : factor_expr . DIV app_expr  (36)

	TIMES  shift 41
	DIV  shift 42
	IN  reduce 33
	PLUS  reduce 33
	MINUS  reduce 33
	EQ  reduce 33
	LT  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	RPAR  reduce 33
	CONS  reduce 33
	COMMA  reduce 33
	WITH  reduce 33
	BAR  reduce 33
	SEMISEMI  reduce 33


state 60
	expr : arith_expr EQ arith_expr .  (14)
	arith_expr : arith_expr . PLUS factor_expr  (32)
	arith_expr : arith_expr . MINUS factor_expr  (33)

	PLUS  shift 36
	MINUS  shift 37
	IN  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	COMMA  reduce 14
	WITH  reduce 14
	BAR  reduce 14
	SEMISEMI  reduce 14


state 61
	expr : arith_expr LT arith_expr .  (15)
	arith_expr : arith_expr . PLUS factor_expr  (32)
	arith_expr : arith_expr . MINUS factor_expr  (33)

	PLUS  shift 36
	MINUS  shift 37
	IN  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	COMMA  reduce 15
	WITH  reduce 15
	BAR  reduce 15
	SEMISEMI  reduce 15


state 62
	list_expr : arith_expr . CONS list_expr  (30)
	list_expr : arith_expr .  (31)
	arith_expr : arith_expr . PLUS factor_expr  (32)
	arith_expr : arith_expr . MINUS factor_expr  (33)

	PLUS  shift 36
	MINUS  shift 37
	CONS  shift 40
	IN  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	RPAR  reduce 31
	COMMA  reduce 31
	WITH  reduce 31
	BAR  reduce 31
	SEMISEMI  reduce 31


state 63
	list_expr : arith_expr CONS list_expr .  (30)

	.  reduce 30


state 64
	factor_expr : factor_expr TIMES app_expr .  (35)
	app_expr : app_expr . atomic_expr  (38)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 35
	PLUS  reduce 35
	TIMES  reduce 35
	MINUS  reduce 35
	DIV  reduce 35
	EQ  reduce 35
	LT  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	RPAR  reduce 35
	CONS  reduce 35
	COMMA  reduce 35
	WITH  reduce 35
	BAR  reduce 35
	SEMISEMI  reduce 35

	atomic_expr  goto 43


state 65
	factor_expr : factor_expr DIV app_expr .  (36)
	app_expr : app_expr . atomic_expr  (38)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 36
	PLUS  reduce 36
	TIMES  reduce 36
	MINUS  reduce 36
	DIV  reduce 36
	EQ  reduce 36
	LT  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	RPAR  reduce 36
	CONS  reduce 36
	COMMA  reduce 36
	WITH  reduce 36
	BAR  reduce 36
	SEMISEMI  reduce 36

	atomic_expr  goto 43


state 66
	toplevel : LET REC var EQ . expr SEMISEMI  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 88
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 67
	toplevel : LET REC var var . EQ expr SEMISEMI  (4)
	expr : LET REC var var . EQ expr IN expr  (9)

	EQ  shift 89
	.  error


state 68
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (7)

	IN  shift 90
	SEMISEMI  shift 91
	.  error


state 69
	vars : var vars .  (46)

	.  reduce 46


state 70
	toplevel : LET var vars EQ . expr SEMISEMI  (3)
	expr : LET var vars EQ . expr IN expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 92
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 71
	expr : LET REC var . var EQ expr IN expr  (9)

	ID  shift 22
	.  error

	var  goto 93


state 72
	expr : LET var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 94
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 73
	expr : LET var vars . EQ expr IN expr  (8)

	EQ  shift 95
	.  error


state 74
	expr : IF expr THEN expr . ELSE expr  (10)

	ELSE  shift 96
	.  error


state 75
	atomic_expr : LPAR expr COMMA expr . RPAR  (42)

	RPAR  shift 97
	.  error


state 76
	expr : FUN var ARROW expr .  (11)

	.  reduce 11


state 77
	expr : FUN var vars ARROW . expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 98
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 78
	expr : DFUN var ARROW expr .  (13)

	.  reduce 13


state 79
	atomic_pattern : INT .  (24)

	.  reduce 24


state 80
	atomic_pattern : BOOL .  (25)

	.  reduce 25


state 81
	atomic_pattern : LPAR . pattern COMMA pattern RPAR  (27)
	atomic_pattern : LPAR . pattern RPAR  (29)

	INT  shift 79
	BOOL  shift 80
	ID  shift 22
	LPAR  shift 81
	LBRACKET  shift 82
	.  error

	var  goto 84
	pattern  goto 99
	atomic_pattern  goto 87


state 82
	atomic_pattern : LBRACKET . RBRACKET  (28)

	RBRACKET  shift 100
	.  error


state 83
	expr : MATCH expr WITH BAR . cases  (17)

	INT  shift 79
	BOOL  shift 80
	ID  shift 22
	LPAR  shift 81
	LBRACKET  shift 82
	.  error

	var  goto 84
	cases  goto 101
	pattern  goto 86
	atomic_pattern  goto 87


state 84
	atomic_pattern : var .  (26)

	.  reduce 26


state 85
	expr : MATCH expr WITH cases .  (16)

	.  reduce 16


state 86
	cases : pattern . ARROW expr  (20)
	cases : pattern . ARROW expr BAR cases  (21)

	ARROW  shift 102
	.  error


state 87
	pattern : atomic_pattern . CONS pattern  (22)
	pattern : atomic_pattern .  (23)

	CONS  shift 103
	RPAR  reduce 23
	ARROW  reduce 23
	COMMA  reduce 23


state 88
	toplevel : LET REC var EQ expr . SEMISEMI  (5)

	SEMISEMI  shift 104
	.  error


state 89
	toplevel : LET REC var var EQ . expr SEMISEMI  (4)
	expr : LET REC var var EQ . expr IN expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 105
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 90
	expr : LET var EQ expr IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 106
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 91
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 92
	toplevel : LET var vars EQ expr . SEMISEMI  (3)
	expr : LET var vars EQ expr . IN expr  (8)

	IN  shift 107
	SEMISEMI  shift 108
	.  error


state 93
	expr : LET REC var var . EQ expr IN expr  (9)

	EQ  shift 109
	.  error


state 94
	expr : LET var EQ expr . IN expr  (7)

	IN  shift 90
	.  error


state 95
	expr : LET var vars EQ . expr IN expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 110
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 96
	expr : IF expr THEN expr ELSE . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 111
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 97
	atomic_expr : LPAR expr COMMA expr RPAR .  (42)

	.  reduce 42


state 98
	expr : FUN var vars ARROW expr .  (12)

	.  reduce 12


state 99
	atomic_pattern : LPAR pattern . COMMA pattern RPAR  (27)
	atomic_pattern : LPAR pattern . RPAR  (29)

	RPAR  shift 112
	COMMA  shift 113
	.  error


state 100
	atomic_pattern : LBRACKET RBRACKET .  (28)

	.  reduce 28


state 101
	expr : MATCH expr WITH BAR cases .  (17)

	.  reduce 17


state 102
	cases : pattern ARROW . expr  (20)
	cases : pattern ARROW . expr BAR cases  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 114
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 103
	pattern : atomic_pattern CONS . pattern  (22)

	INT  shift 79
	BOOL  shift 80
	ID  shift 22
	LPAR  shift 81
	LBRACKET  shift 82
	.  error

	var  goto 84
	pattern  goto 115
	atomic_pattern  goto 87


state 104
	toplevel : LET REC var EQ expr SEMISEMI .  (5)

	.  reduce 5


state 105
	toplevel : LET REC var var EQ expr . SEMISEMI  (4)
	expr : LET REC var var EQ expr . IN expr  (9)

	IN  shift 116
	SEMISEMI  shift 117
	.  error


state 106
	expr : LET var EQ expr IN expr .  (7)

	.  reduce 7


state 107
	expr : LET var vars EQ expr IN . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 118
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 108
	toplevel : LET var vars EQ expr SEMISEMI .  (3)

	.  reduce 3


state 109
	expr : LET REC var var EQ . expr IN expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 119
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 110
	expr : LET var vars EQ expr . IN expr  (8)

	IN  shift 107
	.  error


state 111
	expr : IF expr THEN expr ELSE expr .  (10)

	.  reduce 10


state 112
	atomic_pattern : LPAR pattern RPAR .  (29)

	.  reduce 29


state 113
	atomic_pattern : LPAR pattern COMMA . pattern RPAR  (27)

	INT  shift 79
	BOOL  shift 80
	ID  shift 22
	LPAR  shift 81
	LBRACKET  shift 82
	.  error

	var  goto 84
	pattern  goto 120
	atomic_pattern  goto 87


114: shift/reduce conflict (shift 121, reduce 20) on BAR
state 114
	cases : pattern ARROW expr .  (20)
	cases : pattern ARROW expr . BAR cases  (21)

	BAR  shift 121
	IN  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	COMMA  reduce 20
	WITH  reduce 20
	SEMISEMI  reduce 20


state 115
	pattern : atomic_pattern CONS pattern .  (22)

	.  reduce 22


state 116
	expr : LET REC var var EQ expr IN . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 25
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	RAISE  shift 13
	.  error

	expr  goto 122
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 117
	toplevel : LET REC var var EQ expr SEMISEMI .  (4)

	.  reduce 4


state 118
	expr : LET var vars EQ expr IN expr .  (8)

	.  reduce 8


state 119
	expr : LET REC var var EQ expr . IN expr  (9)

	IN  shift 116
	.  error


state 120
	atomic_pattern : LPAR pattern COMMA pattern . RPAR  (27)

	RPAR  shift 123
	.  error


state 121
	cases : pattern ARROW expr BAR . cases  (21)

	INT  shift 79
	BOOL  shift 80
	ID  shift 22
	LPAR  shift 81
	LBRACKET  shift 82
	.  error

	var  goto 84
	cases  goto 124
	pattern  goto 86
	atomic_pattern  goto 87


state 122
	expr : LET REC var var EQ expr IN expr .  (9)

	.  reduce 9


state 123
	atomic_pattern : LPAR pattern COMMA pattern RPAR .  (27)

	.  reduce 27


state 124
	cases : pattern ARROW expr BAR cases .  (21)

	.  reduce 21


State 114 contains 1 shift/reduce conflict.


35 terminals, 15 nonterminals
51 grammar rules, 125 states
